deploy/proxy/traefik_old/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployment
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.3
          volumeMounts:
            - mountPath: /etc/traefik/traefik.yml
              name: traefik-config
              subPath: traefik.yml
          args:
            - --api.insecure
            - --providers.kubernetesingress
          ports:
            - name: web
              containerPort: 80
            - name: secure
              containerPort: 443
            - name: dashboard
              containerPort: 8080
      volumes:
        - name: traefik-config
          configMap:
            name: traefik-configmap
            items:
              - key: traefik.yml
                path: traefik.yml
