deploy/proxy/traefik_old/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service

spec:
  type: LoadBalancer
  ports:
    - targetPort: web
      port: 80
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-secure-service

spec:
  type: LoadBalancer
  ports:
    - targetPort: secure
      port: 443
  selector:
    app: traefik
